--- a/ChatWithFirebase/Base.lproj/LaunchScreen.storyboard
+++ b/ChatWithFirebase/Base.lproj/LaunchScreen.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,26 +15,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="paperplane.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="E0x-WI-Va8">
-                                <rect key="frame" x="41.5" y="364" width="331" height="178"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image" translatesAutoresizingMaskIntoConstraints="NO" id="E0x-WI-Va8">
+                                <rect key="frame" x="41.5" y="363.5" width="331" height="179"/>
                                 <color key="tintColor" red="0.33333333333333331" green="0.73725490196078436" blue="0.96078431372549022" alpha="0.4041095890410959" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Messages" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ZV-vw-wCq">
-                                <rect key="frame" x="150.5" y="572.5" width="113.5" height="30"/>
+                                <rect key="frame" x="150.5" y="562.5" width="113.5" height="30"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemGray3Color"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="E0x-WI-Va8" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="5tQ-4c-ZT9"/>
                             <constraint firstItem="E0x-WI-Va8" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="F8b-mW-QEO"/>
                             <constraint firstItem="E0x-WI-Va8" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.8" id="Keh-EL-308"/>
                             <constraint firstItem="E0x-WI-Va8" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" multiplier="0.2" id="MeX-eo-akX"/>
                             <constraint firstItem="9ZV-vw-wCq" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="XE4-3S-hxF"/>
-                            <constraint firstItem="9ZV-vw-wCq" firstAttribute="top" secondItem="E0x-WI-Va8" secondAttribute="bottom" constant="30" id="dXV-T3-CMD"/>
+                            <constraint firstItem="9ZV-vw-wCq" firstAttribute="top" secondItem="E0x-WI-Va8" secondAttribute="bottom" constant="20" id="dXV-T3-CMD"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -45,9 +44,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="paperplane.circle.fill" catalog="system" width="128" height="121"/>
-        <systemColor name="systemGray3Color">
-            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="image" width="251" height="201"/>
     </resources>
 </document>
