--- a/ChatWithFirebase/Base.lproj/Main.storyboard
+++ b/ChatWithFirebase/Base.lproj/Main.storyboard
@@ -95,7 +95,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="DYy-pW-GcA">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="724"/>
                                 <color key="separatorColor" systemColor="systemGray4Color"/>
                                 <inset key="separatorInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                 <prototypes>
@@ -141,14 +141,30 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tD3-YY-svU">
+                                <rect key="frame" x="0.0" y="812" width="414" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="RyT-lW-jbe"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <state key="normal" title="Create Group">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="createGroupClicked:" destination="MYv-rQ-zAX" eventType="touchUpInside" id="b7k-LM-CfI"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="7bc-kt-cLb"/>
                         <color key="backgroundColor" systemColor="systemGray3Color"/>
                         <constraints>
                             <constraint firstItem="DYy-pW-GcA" firstAttribute="leading" secondItem="7bc-kt-cLb" secondAttribute="leading" id="3ts-JE-7fy"/>
+                            <constraint firstItem="7bc-kt-cLb" firstAttribute="trailing" secondItem="tD3-YY-svU" secondAttribute="trailing" id="FV4-DF-ndf"/>
+                            <constraint firstItem="tD3-YY-svU" firstAttribute="leading" secondItem="7bc-kt-cLb" secondAttribute="leading" id="TFJ-Ig-tOa"/>
                             <constraint firstItem="7bc-kt-cLb" firstAttribute="trailing" secondItem="DYy-pW-GcA" secondAttribute="trailing" id="bb6-0C-tMG"/>
                             <constraint firstItem="DYy-pW-GcA" firstAttribute="top" secondItem="7bc-kt-cLb" secondAttribute="top" id="cOh-ba-xmT"/>
-                            <constraint firstItem="7bc-kt-cLb" firstAttribute="bottom" secondItem="DYy-pW-GcA" secondAttribute="bottom" id="rPj-Xv-wVy"/>
+                            <constraint firstItem="tD3-YY-svU" firstAttribute="bottom" secondItem="7bc-kt-cLb" secondAttribute="bottom" id="fb4-dh-WhG"/>
+                            <constraint firstItem="tD3-YY-svU" firstAttribute="top" secondItem="DYy-pW-GcA" secondAttribute="bottom" id="vDm-sX-dWe"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Cloud" id="Adv-mS-duY">
@@ -168,6 +184,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="ChatsTBL" destination="DYy-pW-GcA" id="T0O-au-ZVj"/>
+                        <outlet property="createGroupBTN" destination="tD3-YY-svU" id="tv8-WM-man"/>
                         <segue destination="cGa-nD-viF" kind="push" id="MOa-X8-bzW"/>
                         <segue destination="1KM-xf-se2" kind="presentation" identifier="SignOutClicked" modalPresentationStyle="overFullScreen" modalTransitionStyle="crossDissolve" id="DOI-rb-Ula"/>
                         <segue destination="xn7-2w-xmM" kind="push" id="hY2-qg-bOf"/>
@@ -175,7 +192,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sAt-mj-iNd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2661" y="108"/>
+            <point key="canvasLocation" x="2660.8695652173915" y="107.8125"/>
         </scene>
         <!--Cloud MessageVC-->
         <scene sceneID="p0i-XG-pcb">
